[workspace]
resolver = "2"
members = ["usb-pd-rs/usb-pd", "usb-pd-rs/fusb302b", "ws2812-spi-rs"]
exclude = ["usb-pd-rs/pd-interceptor"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[package]
name = "esp_pd"
version = "0.1.0"
authors = ["okhsunrog <me@okhsunrog.ru>"]
edition = "2021"
rust-version = "1.72"

[[bin]]
name = "esp_pd"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
test = false

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
anyhow = "1.0.86"
ws2812-spi = { path = "./ws2812-spi-rs", features = [
    "mosi_idle_high",
] }
smart-leds = "0.4.0"
fusb302b = { path = "./usb-pd-rs/fusb302b" }
usb-pd = { path = "./usb-pd-rs/usb-pd" }
embedded-hal = "1.0.0"


[build-dependencies]
embuild = "0.31.4"


[patch.crates-io]
embuild = { git = "https://github.com/esp-rs/embuild" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
