[package]
name = "esp_pd"
version = "0.1.0"
authors = ["okhsunrog <me@okhsunrog.ru>"]
edition = "2021"
rust-version = "1.78"

[[bin]]
name = "esp_pd"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
anyhow = "1.0.86"
ws2812-spi = { git = "https://github.com/smart-leds-rs/ws2812-spi-rs", branch = "eh10" }
smart-leds = "0.4.0"
fusb302b = { path = "../fusb302b" }
usb-pd = { path = "../usb-pd" }


[build-dependencies]
embuild = "0.31.4"
